# GilTracker

./: .gitignore  README.md  index.html  package.json
src/: index.html  index.js  index.ts  style.css
src-tauri/: Cargo.toml  data.db3  data.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  error.rs  file_manager.rs  game_scanner.rs  main.rs  memory_scanner.rs
